src/test/deca/syntax/valid/objet/DeclarationMethode.deca
class CALC {
    int x;

    void calcul(int x){
        this.x =x;  
    }
}
{
    
}