src/test/deca/syntax/invalid/sansObjet/IfExpressionFalse6.deca
{
    int x=2;
    if (x--){
        println("x=2");
    }
}